fixed bad html formatting, adding extra whitespace.

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -5,7 +5,7 @@
 }
 
 .navbar-toggler {
-  color: #FFFFFF;
+  color: white;
 }
 
 .nav-link {
